<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Locate me", should appear as action button if possible -->
    <item
        android:id="@+id/action_geolocate"
        android:icon="@drawable/ic_geolocate"
        android:title="@string/action_geolocate"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/normal_map"
        android:title="@string/normal_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_map"
        android:title="@string/hybrid_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/satellite_map"
        android:title="@string/satellite_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_map"
        android:title="@string/terrain_map"
        app:showAsAction="never" />
</menu>